# plugin

./: DynamicLibrary.h  DynamicLibrary_Unix.cpp  DynamicLibrary_Win32.cpp  ObjectAdapter.h  PluginIter.cpp  PluginIter.h  PluginManager.cpp  PluginManager.h  plugin.h  typedefs.h
test/: CMakeLists.txt  DynamicLibrary.t.cpp  PluginIter.t.cpp  PluginManager.t.cpp  hello_dll.c  hello_dll.cpp  hello_dll.h  simple_object.c  simple_object.h  simple_plugin.c
